--- a/config/rdfstore.yml.example
+++ b/config/rdfstore.yml.example
@@ -1,9 +1,13 @@
-# RDF store setup blank template
-development:
-	type: sesame
-test:
-	type: sesame
-production:
-	type: sesame
-
-
+--- 
+production: 
+  type: sesame
+  location: ./sesame_production.db
+  backend: native
+test: 
+  type: sesame
+  location: ./sesame_test.db
+  backend: native
+development: 
+  type: sesame
+  location: ./sesame_development.db
+  backend: native
