--- a/config/talia_core.yml.example
+++ b/config/talia_core.yml.example
@@ -34,6 +34,8 @@ namespaces:
     hyper: "http://www.hypernietzsche.org/ontology/"
     # FOAF
     foaf: http://xmlns.com/foaf/0.1/
+	# SKOS
+	skos: http://www.w3.org/2004/02/skos/core#
     # DublinCore namespace
     dct: http://purl.org/dc/terms/
     dcmit: http://purl.org/dc/dcmitype/
