Updated base generator with new layout from current demo. Minor changes, old importer classes removed.

--- a/standalone_templates/Rakefile
+++ b/standalone_templates/Rakefile
@@ -14,12 +14,12 @@ load 'tasks/talia_core_tasks.rake'
 require 'version'
 
 desc "Load fixtures into the current database.  Load specific fixtures using FIXTURES=x,y"  
-task :fixtures => "talia_core:talia_init" do
+task :fixtures => "talia_core:init" do
   load_fixtures 
 end  
 
 desc "Migrate the database through scripts in db/migrate. Target specific version with VERSION=x"  
-task :migrate => "talia_core:talia_init" do
+task :migrate => "talia_core:init" do
   do_migrations 
   puts "Migrations done."
 end  
