Added default indexes, to_uri handling and minor fixes to the default controllers.

--- a/config/talia_core.yml.example
+++ b/config/talia_core.yml.example
@@ -44,3 +44,4 @@ namespaces:
     luccadom: http://trac.talia.discovery-project.eu/wiki/LuccaOntology#
     talias: http://trac.talia.discovery-project.eu/wiki/StructuralOntology#
     taliadom: http://trac.talia.discovery-project.eu/wiki/SampleDomainOntology#
+    sesame: http://www.openrdf.org/schema/sesame#
