Added new features to class-defined realtions

--- a/test/fixtures/active_sources.yml
+++ b/test/fixtures/active_sources.yml
@@ -2,6 +2,9 @@
 
 testy:
     uri: http://testy.com/testme/hard
+    
+testy_two:
+    uri: http://testy.com/testme/harder
 
 duplicator:
     uri: http://testy.com/testme/duplicator
