--- a/config/talia_core.yml.example
+++ b/config/talia_core.yml.example
@@ -37,7 +37,7 @@ data_directory_location:
 iip_server_uri:
 vips_command:
 convert_command:
-googlemap_key: "ABQIAAAAOY6Zv9NunttIT5fALwpiRhSPtRO-56uzZJvIGXQxlGNVk-r4kxRE8NIB3lUS5Sog8714vby5L9bupQ"
+googlemap_key: 
 oai:
   prefix: "oai:talia"
   repository_name: "Talia OAI Interface"
